--- a/Induwara/feedback.css
+++ b/Induwara/feedback.css
@@ -4,9 +4,11 @@ body{
     margin: 0;
     font-family: 'Encode Sans', sans-serif;
     background: linear-gradient(rgba(4, 30, 4, 0.3), rgba(4,9,30,0.7)), url('./assests/forest_background.png');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+    width: 100%;
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
+    background-position: center; 
 }
 
 .navbar {
