--- a/Induwara/home.css
+++ b/Induwara/home.css
@@ -1,12 +1,13 @@
 /* Section 1 - start */
 
 .sec1 {
-    background: linear-gradient(rgba(4, 30, 4, 0.3), rgba(4,9,30,0.7)),url('./assests/background-main.png') no-repeat center center/cover;
+    background: linear-gradient(rgba(4, 30, 4, 0.3), rgba(4,9,30,0.7)),url('./assests/background-main.png');
     min-height: 100vh;
     width: 100%;
-    background-position: center;
-    background-size: cover;
-    position: relative;
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
+    background-position: center; 
     margin-top: -20px;
     padding-top: 20px;
 }
