--- a/Uditha/team.css
+++ b/Uditha/team.css
@@ -1,5 +1,10 @@
 body{
     background-image: url(assests/bg.jpg);
+    width: 100%;
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
+    background-position: center; 
 }
 
 h1 {
