--- a/Induwara/feedback.css
+++ b/Induwara/feedback.css
@@ -2,44 +2,47 @@
 
 body{
     margin: 0;
-    font-family: 'Encode Sans', sans-serif;
     background: linear-gradient(rgba(4, 30, 4, 0.3), rgba(4,9,30,0.7)), url('./assests/forest_background.png');
     width: 100%;
     background-size: cover; 
     background-repeat: no-repeat; 
     background-attachment: fixed; 
-    background-position: center; 
+    background-position: center;
 }
 
-header {
-    background-color: #333;
-    padding: 10px 0;
-}
-
-main {
+.whole {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 80vh;
     padding: 20px;
+    font-family: "Poppins", sans-serif;
+    margin-top: 0px;
 }
 
 .feedback-form-section {
-    background:#ffffff80;
-    padding: 20px;
-    border-radius: 30px;
+    background:#ffffffcd;
+    padding: 30px 50px 40px 30px;
+    border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: px;
     max-width: 600px;
     text-align: center;
     margin-bottom: 100px;
-    margin-top: 20px;
+    
+    
 }
 
-.feedback-form-section h1 {
-    font-family: 'Encode Sans', sans-serif;
-    margin-bottom: 20px;
-    font-weight: bold;
+span{
+    color: #A91D3A;
+}
+h1 {
+    margin-top: 50px;
+    font-size: 45px;
+    font-weight: 500;
+    color: #a0bca8;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
 }
 
 .feedback-form-section form {
@@ -52,6 +55,7 @@ main {
 .feedback-form-section p {
     text-align: left;
     font-size: 1em;
+    color: #304D30;
 }
 
 .feedback-form-section input[type="text"],
@@ -75,7 +79,7 @@ main {
     padding: 0 10px;
 }
 
-.feedback-form-section button {
+.feedback-form-section .submit {
     background-color: #28a745;
     color: #fff;
     border: none;
@@ -83,6 +87,20 @@ main {
     border-radius: 4px;
     font-size: 1em;
     cursor: pointer;
+    width: 200px;
+    display: inline-block;
+}
+
+.feedback-form-section .reset {
+    background-color: #28a745;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    font-size: 1em;
+    cursor: pointer;
+    width: 200px;
+    display: inline-block;
 }
 
 /* Feedback - end */
