--- a/Lithila/gallery.css
+++ b/Lithila/gallery.css
@@ -20,7 +20,12 @@ body {
     margin: 5px 20px 0 20px;
 }
 
-h1{
+h1 {
+    margin-top: 50px;
+    font-size: 45px;
+    font-weight: 500;
+    color: #a0bca8;
+    text-align: center;
     font-family: "Poppins", sans-serif;
 }
 
