Updated the content page - student 04
Added new background pictures

--- a/Lithila/sitemap.css
+++ b/Lithila/sitemap.css
@@ -1,7 +1,11 @@
 /*Sitemap*/
 
 body {
-    background-image: url('./assests/sitemap-bg.jpg'); 
+        background-image: url('./assests/sitemap-bg.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center;
 }
 
 .heading {
