--- a/Uditha/team.css
+++ b/Uditha/team.css
@@ -5,13 +5,7 @@ body{
     background-repeat: no-repeat; 
     background-attachment: fixed; 
     background-position: center; 
-}
-
-h1 {
-    font-family: "Arial";
-    font-size: 45px;
-    padding-top: 2%; 
-    color: black;
+    
 }
 
 .main{
@@ -20,6 +14,8 @@ h1 {
     min-height: 450px;
     margin: 20px 60px 150px 60px;
     padding: 90px 0px 0px 0px;
+    font-family: "Poppins", sans-serif;
+    
 }
 
 .main2 {
@@ -34,6 +30,11 @@ h1 {
     color: #1e4d2bc2;
     text-align: center;
     font-family: "Poppins", sans-serif;
+    
+}
+
+h3{
+    font-weight: 500;
 }
 
 .sub {
