Content page main div margin change

--- a/Induwara/content.css
+++ b/Induwara/content.css
@@ -41,7 +41,7 @@ body{
     background-color: #ffffffd7;
     width: 80%;
     padding: 30px;
-    margin-left: 130px;
+    margin: auto;
     margin-top: 40px;
     border-radius: 30px;
     font-family: "Poppins", sans-serif; 
