--- a/Lithila/sitemap.css
+++ b/Lithila/sitemap.css
@@ -8,12 +8,13 @@ body {
         background-position: center;
 }
 
-.heading {
-    margin-bottom: 20px;
-    margin-top: 10px;
+h1 {
+    margin-top: 50px;
+    font-size: 50px;
+    font-weight: 530;
+    color: #a0bca8;
     text-align: center;
-    padding: 0;
-    color: #fff;
+    font-family: "Poppins", sans-serif;
 }
 
 .sitemap-container {
