--- a/Uditha/team.css
+++ b/Uditha/team.css
@@ -54,6 +54,7 @@ a{
     overflow: hidden;
     transition: transform 0.8s ease;
     filter: grayscale(40%);
+    text-align: center;
 }
 
 .content {
