--- a/Induwara/feedback.css
+++ b/Induwara/feedback.css
@@ -1,4 +1,4 @@
-/* Feedback - start */
+/* Form */
 
 body{
     margin: 0;
@@ -10,7 +10,7 @@ body{
     background-position: center;
 }
 
-.whole {
+.whole-form {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,21 +21,19 @@ body{
 }
 
 .feedback-form-section {
-    background:#ffffffcd;
+    background: #eef3e8;
     padding: 30px 50px 40px 30px;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: px;
     max-width: 600px;
-    text-align: center;
-    margin-bottom: 100px;
-    
-    
+    text-align: center;   
 }
 
 span{
     color: #A91D3A;
 }
+
 h1 {
     margin-top: 50px;
     font-size: 45px;
@@ -79,28 +77,83 @@ h1 {
     padding: 0 10px;
 }
 
-.feedback-form-section .submit {
-    background-color: #28a745;
-    color: #fff;
+button {
+    background-color: #597445;
+    color: #E7F0DC;
     border: none;
     padding: 10px 20px;
     border-radius: 4px;
     font-size: 1em;
     cursor: pointer;
-    width: 200px;
-    display: inline-block;
+    margin-top: 10px;
+    font-family: "Poppins", sans-serif;
+}
+button:hover {
+    background-color: #729762;
 }
 
-.feedback-form-section .reset {
-    background-color: #28a745;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
-    font-size: 1em;
-    cursor: pointer;
-    width: 200px;
-    display: inline-block;
+
+
+/* Preview */
+
+.preview{
+    display: none;
+    margin-top: 20px;
+    border: 1px solid #ccc;
+    padding: 20px;
+    background: #eef3e8;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: "Poppins", sans-serif;
+}
+
+.preview p{
+    text-align: left;
+    margin: 10px;
+}
+
+.error{
+    color: #A91D3A;
+    font-size: 13px;
+}
+
+h2{
+    color: #304D30;
+}
+
+
+
+/* Thank you */
+
+.thank-you{
+    display: none;
+    margin-top: 20px;
+    padding: 20px;
+    background: #eef3e8;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: "Poppins", sans-serif;
+}
+
+.thank-you p{
+    text-align: center;
+    margin: 20px;    
+}
+
+.thank-you h2{
+    text-align: center;
 }
 
 /* Feedback - end */
