--- a/Lithila/sitemap.css
+++ b/Lithila/sitemap.css
@@ -18,9 +18,12 @@ h1 {
 }
 
 .sitemap-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    border: 1px solid rgba(255, 255, 255, 0.3); 
+    border-radius: 10px; 
+    padding: 2px; 
+    background-color: rgba(255, 255, 255, 0.336); 
+    width: 1200px;
+    margin: 0 auto; 
 }
 
 .node {
